# practical-deep-learning-for-coders

./: README.md  pyproject.toml
datasets/: black.csv  grizzly.csv  teddy.csv
notebooks/: lesson-1.ipynb  lesson-2.ipynb  lesson_2.ipynb
tests/: test_practical_deep_learning_for_coders.py
